# dorahacks

./: .env.example  .gitignore  pyproject.toml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
mantis/: __init__.py  check_connections.py  config.py
mantis/agent/: critic.py  llm.py  prompts.py  research_agent.py  run.py  schema.py  tools.py
mantis/contracts/: AlphaSignalRegistry.json  AlphaSignalRegistry.sol  compile.py  deploy.py  deployed_address.txt  e2e_test.py  registry.py
mantis/tools/: analysis.py  chain_client.py  constants.py  data_fetchers.py  demo.py
notes/: brainstorm-log.md
tests/: test_registry_local.py
